--- a/assets/css/mail.css
+++ b/assets/css/mail.css
@@ -26,6 +26,7 @@ html {
     margin: 0 auto;
     margin-top: 25px;
     margin-bottom: 25px;
+    /*background: #f3f2f9;*/
     background: lightgray;
     padding: 20px;
     min-height:410px;
