--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -92,7 +92,7 @@ iframe {
     width: 100%;
     height:150px;
     display: flex;
-    background-color: lightgrey;
+    background-color: #f3f2f9;
     border-radius: 5px;
     /*overflow: hidden;*/
     /*border: 1px solid black;*/
