--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -224,9 +224,15 @@ input {
 #autori {
     position: relative;
     top: 30px;
-    font-family: 'Acme', sans-serif;
+    /*font-family: 'Acme', sans-serif;*/
+
     font-weight: 600;
     margin-left: 10px;
+    font-size: 14px;
+}
+
+* {
+    /*font-family: "Roboto", sans-serif !important;*/
 }
 
 #filename {
@@ -239,7 +245,8 @@ input {
 }
 
 * {
-    font-family:'Oxygen',  sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
 }
 
 #title {
