--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -77,9 +77,13 @@ iframe {
 .view_button {
     position: relative;
     font-size: 12px;
-    padding: 0 5px;
+    float: right;
+    /*padding: 0 5px;*/
     color: gray;
-    margin-top: 55px;
+    margin: 5px;
+
+    width: 110px;
+
 }
 
 .single_row {
@@ -88,11 +92,11 @@ iframe {
     /*margin-right: 10px;*/
     margin-bottom: 15px;
 
-    padding-bottom: 15px;
+    /*padding-bottom: 15px;*/
     width: 100%;
-    height:150px;
+    /*height:150px;*/
     display: flex;
-    background-color: #f3f2f9;
+    /*background-color: #f3f2f9;*/
     border-radius: 5px;
     /*overflow: hidden;*/
     /*border: 1px solid black;*/
@@ -101,25 +105,40 @@ iframe {
 
 .single_row textarea {
     resize: none;
+    margin-top: 5px;
 }
 
 #submit_button, #ucitaj {
     position: relative;
+    margin-top: 10px;
     float: right;
-    padding: 10px;
+    padding: 5px 10px;
     color: white;
-    background: slategrey;
+    background: #6a9eb8;
 }
 
 #submit_button:hover, #ucitaj:hover {
     box-shadow: 2px 2px 10px gray;
+
 }
 
 
 
+.mail_button {
+    float: right;
+    margin-top: 10px;
+    padding: 5px 10px;
+    background: #6a9eb8;
+    color: white;
+}
+.mail_button:hover {
+    background: #6a9eb8;
+}
+
+
 input {
     margin-left: 6px;
-    margin-bottom: 5px;
+
     width: 27%;
 ;
 }
@@ -130,13 +149,14 @@ input {
 }
 
 .pf, .nf {
-    color: cornflowerblue;
-    margin-left: 10px;
-    font-size: 28px;
+    color: #6a9eb8;
+    margin-left: 5px;
+    font-size: 20px;
 }
 
 .pf:hover, .nf:hover {
-    color:#6a9eb8;
+    color:lightseagreen;
+    font-size: 18px;
 }
 
 
@@ -154,10 +174,10 @@ input {
     /*border: 1px solid black;*/
 }
 
-.w3 .remove_button {
+ .remove_button {
    position: relative;
-    top:10px;
-    left: 5px;
+    /*top:10px;*/
+    /*left: 5px;*/
     padding: 5px;
     color:red;
     font-weight: 500;
@@ -165,7 +185,7 @@ input {
 
 
 
-.w3 .remove_button:hover {
+.remove_button:hover {
     cursor: pointer;
     background-color: #6a9eb8;
     border-radius: 4px;
@@ -173,39 +193,6 @@ input {
 
 
 
-.w3 .number {
-    position: relative;
-    top:20px;
-    left: 10px;
-}
-
-.w10 {
-    position: relative;
-
-    display: inline-block;
-    height:100px;
-    width: 10%;
-    /*border: 1px solid black;*/
-}
-
-.w25 {
-    display: inline-block;
-    height:100px;
-    width: 25%;
-    /*border: 1px solid black;*/
-}
-
-.w60 {
-    display: inline-block;
-    height:100px;
-    width: 60%;
-    /*border: 1px solid black;*/
-
-}
-
-.w60 textarea {
-    margin-top: 10px;
-}
 .journal_title {
     display:inline-block;
     position: relative;
@@ -213,12 +200,6 @@ input {
     height: 30px;
    /*border: 1px solid black;*/
 
-
-}
-
-
-.w25 input {
-    width: 90%;
 }
 
 #autori {
@@ -235,14 +216,7 @@ input {
     /*font-family: "Roboto", sans-serif !important;*/
 }
 
-#filename {
-    font-weight: bold;
-    position: relative;
-    top:5px;
-    color:gray ;
 
-
-}
 
 * {
     font-family: 'Roboto', sans-serif;
@@ -256,7 +230,7 @@ input {
 }
 
 input, textarea {
-    padding-left: 5px;
+    /*padding-left: 5px;*/
     border-radius: 5px;
     border: none;
 }
@@ -277,4 +251,60 @@ input, textarea {
 
 #submit_button {
     display: none;
+}
+
+#error {
+color:red;
+margin:0 auto;
+position:relative;
+margin-top:20px;
+font-size:26px;
+    font-weight: bold;
+}
+
+.tw5 {
+    /*height: 20px;*/
+    width: 5%;
+}
+
+.tw10 {
+    text-align: right;
+    width: 10%;
+}
+
+.tw20 {
+    font-weight: bolder;
+    /*height: 20px;*/
+    width: 20%;
+    /*background: lightgray;*/
+    text-align: left;
+    padding-left: 10px;
+    border-bottom: none !important;
+}
+
+.btn20 {
+    position: relative;
+    background: none;
+    margin: 0;
+   /*top:-2px;*/
+}
+
+.form_table {
+    width: 100%;
+}
+
+.main tr  {
+    font-size: 14px;
+    box-sizing: border-box;
+    padding: 15px;
+    border-bottom: 1px solid lightgray;
+    /*background: greenyellow;*/
+}
+
+.mini tr {
+    border: none!important;
+}
+
+td {
+    padding:1px;
 }
