--- a/assets/css/help_modal.css
+++ b/assets/css/help_modal.css
@@ -1,6 +1,7 @@
 .modal-content {
+    left: calc(50% - 450px);
     width: 900px !important;
-    margin: 0 auto;
+    /*margin: 0 auto !important;*/
 }
 
 .help_img {
