--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('http://twitter.github.com/bootstrap/assets/css/bootstrap.css');
+@import url('https://twitter.github.com/bootstrap/assets/css/bootstrap.css');
 /*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
