--- a/assets/css/mail.css
+++ b/assets/css/mail.css
@@ -34,6 +34,8 @@ html {
     background: lightgray;
     padding: 20px;
     min-height:430px;
+    border-radius: 5px;
+    box-shadow: 10px 10px 20px lightslategray;
 
 
 }
